fix issue archive details alignment

--- a/css/issue-archive.css
+++ b/css/issue-archive.css
@@ -140,6 +140,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 12px;
+    flex:1;
 }
 
 .issue-archive-number {
